// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TranscriptWidget render snapshots: renders as expected with allowTranscriptDownloads true 1`] = `
<injectIntl(ShimmedIntlComponent)
  isError={false}
  subtitle="english"
  title="Transcript"
>
  <Stack
    gap={3}
  >
    <Form.Group
      className="mt-4.5"
    >
      <b>
        Transcript widget:
      </b>
      <div
        className="mb-1"
      >
        <Form.Checkbox
          checked={true}
          className="mt-4.5 decorative-control-label"
        >
          <Form.Label>
            <FormattedMessage
              defaultMessage="Allow transcript downloads"
              description="Label for allow transcript downloads checkbox"
              id="authoring.videoeditor.transcripts.allowDownloadCheckboxLabel"
            />
          </Form.Label>
        </Form.Checkbox>
        <Component
          key="right"
          overlay={
            <UNDEFINED>
              <FormattedMessage
                defaultMessage="Learners will see a link to download the transcript below the video."
                description="Message for show by default checkbox"
                id="authoring.videoeditor.transcripts.upload.allowDownloadTooltipMessage"
              />
            </UNDEFINED>
          }
          placement="right"
        >
          <Icon
            className="d-inline-block mx-3"
          />
        </Component>
      </div>
      <Form.Checkbox
        checked={false}
        className="mt-4.5 decorative-control-label"
      >
        <Form.Label
          size="sm"
        >
          <FormattedMessage
            defaultMessage="Show transcript in the video player by default"
            description="Label for show by default checkbox"
            id="authoring.videoeditor.transcripts.upload.showByDefaultCheckboxLabel"
          />
        </Form.Label>
      </Form.Checkbox>
    </Form.Group>
    <Button
      onClick={[Function]}
      variant="link"
    >
      <FormattedMessage
        defaultMessage="Upload Transcript"
        description="Label for upload button"
        id="authoring.videoeditor.transcripts.upload.label"
      />
    </Button>
  </Stack>
</injectIntl(ShimmedIntlComponent)>
`;

exports[`TranscriptWidget render snapshots: renders as expected with default props 1`] = `
<injectIntl(ShimmedIntlComponent)
  isError={false}
  subtitle="None"
  title="Transcript"
>
  <Stack
    gap={3}
  >
    <FormattedMessage
      defaultMessage="Add video transcripts for improved accessibility."
      description="Message for adding first transcript"
      id="authoring.videoeditor.transcripts.upload.firstTranscriptMessage"
    />
    <Button
      onClick={[Function]}
      variant="link"
    >
      <FormattedMessage
        defaultMessage="Upload Transcript"
        description="Label for upload button"
        id="authoring.videoeditor.transcripts.upload.label"
      />
    </Button>
  </Stack>
</injectIntl(ShimmedIntlComponent)>
`;

exports[`TranscriptWidget render snapshots: renders as expected with showTranscriptByDefault true 1`] = `
<injectIntl(ShimmedIntlComponent)
  isError={false}
  subtitle="english"
  title="Transcript"
>
  <Stack
    gap={3}
  >
    <Form.Group
      className="mt-4.5"
    >
      <b>
        Transcript widget:
      </b>
      <div
        className="mb-1"
      >
        <Form.Checkbox
          checked={false}
          className="mt-4.5 decorative-control-label"
        >
          <Form.Label>
            <FormattedMessage
              defaultMessage="Allow transcript downloads"
              description="Label for allow transcript downloads checkbox"
              id="authoring.videoeditor.transcripts.allowDownloadCheckboxLabel"
            />
          </Form.Label>
        </Form.Checkbox>
        <Component
          key="right"
          overlay={
            <UNDEFINED>
              <FormattedMessage
                defaultMessage="Learners will see a link to download the transcript below the video."
                description="Message for show by default checkbox"
                id="authoring.videoeditor.transcripts.upload.allowDownloadTooltipMessage"
              />
            </UNDEFINED>
          }
          placement="right"
        >
          <Icon
            className="d-inline-block mx-3"
          />
        </Component>
      </div>
      <Form.Checkbox
        checked={true}
        className="mt-4.5 decorative-control-label"
      >
        <Form.Label
          size="sm"
        >
          <FormattedMessage
            defaultMessage="Show transcript in the video player by default"
            description="Label for show by default checkbox"
            id="authoring.videoeditor.transcripts.upload.showByDefaultCheckboxLabel"
          />
        </Form.Label>
      </Form.Checkbox>
    </Form.Group>
    <Button
      onClick={[Function]}
      variant="link"
    >
      <FormattedMessage
        defaultMessage="Upload Transcript"
        description="Label for upload button"
        id="authoring.videoeditor.transcripts.upload.label"
      />
    </Button>
  </Stack>
</injectIntl(ShimmedIntlComponent)>
`;

exports[`TranscriptWidget render snapshots: renders as expected with transcripts 1`] = `
<injectIntl(ShimmedIntlComponent)
  isError={false}
  subtitle="english"
  title="Transcript"
>
  <Stack
    gap={3}
  >
    <Form.Group
      className="mt-4.5"
    >
      <b>
        Transcript widget:
      </b>
      <div
        className="mb-1"
      >
        <Form.Checkbox
          checked={false}
          className="mt-4.5 decorative-control-label"
        >
          <Form.Label>
            <FormattedMessage
              defaultMessage="Allow transcript downloads"
              description="Label for allow transcript downloads checkbox"
              id="authoring.videoeditor.transcripts.allowDownloadCheckboxLabel"
            />
          </Form.Label>
        </Form.Checkbox>
        <Component
          key="right"
          overlay={
            <UNDEFINED>
              <FormattedMessage
                defaultMessage="Learners will see a link to download the transcript below the video."
                description="Message for show by default checkbox"
                id="authoring.videoeditor.transcripts.upload.allowDownloadTooltipMessage"
              />
            </UNDEFINED>
          }
          placement="right"
        >
          <Icon
            className="d-inline-block mx-3"
          />
        </Component>
      </div>
      <Form.Checkbox
        checked={false}
        className="mt-4.5 decorative-control-label"
      >
        <Form.Label
          size="sm"
        >
          <FormattedMessage
            defaultMessage="Show transcript in the video player by default"
            description="Label for show by default checkbox"
            id="authoring.videoeditor.transcripts.upload.showByDefaultCheckboxLabel"
          />
        </Form.Label>
      </Form.Checkbox>
    </Form.Group>
    <Button
      onClick={[Function]}
      variant="link"
    >
      <FormattedMessage
        defaultMessage="Upload Transcript"
        description="Label for upload button"
        id="authoring.videoeditor.transcripts.upload.label"
      />
    </Button>
  </Stack>
</injectIntl(ShimmedIntlComponent)>
`;
